k8s/apps/invenio/invenio-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: invenio-ui
  namespace: invenio
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`invenio.vityasy.me`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: invenio-web
          port: 8000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: invenio-api
  namespace: invenio
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api-invenio.vityasy.me`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik
      services:
        - name: invenio-web
          port: 8000
